[gd_scene load_steps=10 format=3 uid="uid://f0v1fvdedvib"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_wadfs"]
[ext_resource type="Theme" uid="uid://14wy2gupjxwc" path="res://res/main_theme.tres" id="2_gug6t"]
[ext_resource type="Texture2D" uid="uid://d0pfd0arsvmmg" path="res://res/Background/Purple.png" id="2_jkmq3"]
[ext_resource type="Texture2D" uid="uid://dnwgre5a5nkiu" path="res://res/Main Characters/Pink Man/Fall (32x32).png" id="3_7ttfy"]
[ext_resource type="Texture2D" uid="uid://djpqttfos7le" path="res://res/Menu/Buttons/Settings.png" id="4_wy0xj"]
[ext_resource type="Texture2D" uid="uid://crfpfrvh57qji" path="res://res/Menu/Buttons/Leaderboard.png" id="6_n2j40"]
[ext_resource type="Texture2D" uid="uid://ijjorwutfg04" path="res://res/Menu/Buttons/Play.png" id="7_7qytj"]
[ext_resource type="FontFile" uid="uid://o51ww71nctnx" path="res://Fonts/Brusnika-normal_version_02.otf" id="8_e4tum"]
[ext_resource type="AudioStream" uid="uid://d2cuouma7bgjj" path="res://res/Music/SnowfallMain.mp3" id="9_a7tya"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_wadfs")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -68.0
offset_right = 59.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_gug6t")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "НАЧАТЬ ИГРУ"

[node name="ContinueGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.635294, 0.819608, 0.52549, 1)
theme_override_font_sizes/font_size = 45
text = "ПРОДОЛЖИТЬ ИГРУ"

[node name="HIScore" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "РЕКОРДЫ"

[node name="Option" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "НАСТРОЙКИ"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "ВЫХОД"

[node name="mainCharIMG" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(-191.5, -17)
scale = Vector2(11.9063, 11.9063)
texture = ExtResource("3_7ttfy")

[node name="mainOptIMG" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.447059)
position = Vector2(270.5, 202)
scale = Vector2(2.09524, 2.09524)
texture = ExtResource("4_wy0xj")

[node name="mainTopIMG" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.447059)
position = Vector2(270.5, 144)
scale = Vector2(2.095, 2.095)
texture = ExtResource("6_n2j40")

[node name="mainPlayIMG" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.447059)
position = Vector2(269.5, 28)
scale = Vector2(2.095, 2.095)
texture = ExtResource("7_7qytj")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_e4tum")
text = "Skalettson | ARR license © 
"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="StillParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-1, 0)
motion_mirroring = Vector2(1053, 0)

[node name="Purple" type="Sprite2D" parent="ParallaxBackground/StillParallaxLayer"]
position = Vector2(525.5, 324)
scale = Vector2(16.4531, 10.125)
texture = ExtResource("2_jkmq3")

[node name="MoveParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.9, 0.9)
motion_mirroring = Vector2(1053, 0)

[node name="Purple" type="Sprite2D" parent="ParallaxBackground/MoveParallaxLayer"]
self_modulate = Color(1, 0.67451, 0.654902, 1)
position = Vector2(528, 325)
rotation = 0.785989
scale = Vector2(4.22514, 4.22514)
texture = ExtResource("2_jkmq3")

[node name="MoveParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(1053, 0)

[node name="Purple" type="Sprite2D" parent="ParallaxBackground/MoveParallaxLayer2"]
self_modulate = Color(0.85098, 0.705882, 0.952941, 0.513726)
position = Vector2(527.998, 327.513)
rotation = 0.785989
scale = Vector2(4.87611, 4.87611)
texture = ExtResource("2_jkmq3")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_a7tya")
autoplay = true
mix_target = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HIScore" to="." method="_on_hi_score_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
